一応できた

--- a/frontend/assets/sass/__header.scss
+++ b/frontend/assets/sass/__header.scss
@@ -1,7 +1,7 @@
-// l-header
-.header_menuBtn {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-  padding-left: 0.5rem;
-  font-size: 2rem;
+.nav-wrapper {
+  background-color: white;
+}
+.header_menuBtn,
+.header_returnBtn {
+  padding-left: 1rem;
 }
