--- a/frontend/assets/sass/common.scss
+++ b/frontend/assets/sass/common.scss
@@ -2,6 +2,9 @@
 @import "./___reset.scss";
 @import "./__header.scss";
 @import "./_index.scss";
+@import "./_detail.scss";
+@import "./_contact.scss";
+@import "./_aboutKFUG.scss";
 
 * {
   font-size: $fontsize-base;
