--- a/frontend/assets/sass/_index.scss
+++ b/frontend/assets/sass/_index.scss
@@ -1,8 +1,8 @@
-// l-pageArea--home
 .session {
   border-bottom: 2px solid lightgrey;
 }
-.session_fullEmpty {
+.session_full,
+.session_empty {
   line-height: 1.5rem;
   font-size: $fontsize-base * 0.9;
   margin-top: 0.5rem;
@@ -10,15 +10,21 @@
   text-align: center;
   padding-left: 1rem;
   padding-right: 1rem;
+}
+.session_empty {
+  background-color: $clr-deepOrange;
+  color: white;
+}
+.session_full {
   border: 1px solid $clr-deepOrange;
   color: $clr-deepOrange;
 }
 .session_date {
   margin-top: 0.5rem;
   text-align: center;
-  border: 2px solid $clr-lightBlue;
-  color: $clr-lightBlue;
-  font-size: $fontsize-base * 1.4;
+  background-color: $clr-lightBlue;
+  color: white;
+  font-size: $fontsize-base * 1.2;
 }
 .session_name {
   margin-top: 0.5rem;
@@ -37,8 +43,6 @@
 .session_timeIcon,
 .session_placeIcon {
   font-size: $fontsize-base * 1.3;
-}
-.session_timeIcon {
 }
 .session_placeIcon {
   padding-left: 0.2rem;
