API実装全般（あとはCarbonと参加orキャンセルのみ）

--- a/frontend/assets/sass/__header.scss
+++ b/frontend/assets/sass/__header.scss
@@ -1,6 +1,11 @@
 .nav-wrapper {
   background-color: white;
 }
+.header_returnBtnBox {
+  &:hover {
+    cursor: pointer;
+  }
+}
 .header_menuBtn,
 .header_returnBtn {
   padding-left: 1rem;
