--- a/frontend/assets/sass/_detail.scss
+++ b/frontend/assets/sass/_detail.scss
@@ -46,11 +46,11 @@
 }
 .sessionDetail_place {
   color: $fontcolor-base;
-  padding-top: 1rem;
+  padding-top: 0.5rem;
   padding-left: 1.3rem;
   font-weight: bold;
   font-size: $fontsize-base * 1.1;
-  text-decoration: underline;
+  //text-decoration: underline;
 }
 .sessionDetail_applyBox {
   text-align: center;
